Restore all 44 product pages from v3 build

--- a/products/5-amino-1mq.html
+++ b/products/5-amino-1mq.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Oral Capsule</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>42464-96-0</td></tr>
 <tr><td>Molecular Weight</td><td>159.2 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>10</sub>H<sub>11</sub>N<sub>2</sub><sup>+</sup></td></tr>
@@ -96,16 +97,18 @@
 </div>
 <h2>What is 5-Amino-1MQ?</h2>
 <p>5-Amino-1-methylquinolinium targets a metabolic bottleneck: nicotinamide N-methyltransferase (NNMT), an enzyme that consumes NAD+ precursors by methylating nicotinamide for excretion. By inhibiting NNMT, 5-Amino-1MQ preserves intracellular nicotinamide, allowing its recycling back to NAD+ through the salvage pathway. This mechanism provides an alternative approach to NAD+ augmentation—rather than supplying more precursor, block the pathway that depletes it.</p><p>NNMT overexpression correlates with metabolic dysfunction and adiposity in preclinical models, suggesting this enzyme represents a metabolic control point. Research with 5-Amino-1MQ explores NNMT's role in NAD+ homeostasis, methylation reactions, energy metabolism, and the enzyme's potential as a metabolic regulatory target. Note: This is an oral small molecule, not an injectable peptide.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store at room temperature (15-30°C) in sealed container protected from moisture. This small molecule exhibits excellent stability. For research use, dissolve in appropriate vehicle according to experimental protocol.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -120,6 +123,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
