--- a/products/aod-9604.html
+++ b/products/aod-9604.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>2mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>221231-10-3</td></tr>
 <tr><td>Molecular Weight</td><td>1815.1 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>78</sub>H<sub>123</sub>N<sub>23</sub>O<sub>23</sub>S<sub>2</sub></td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is AOD-9604?</h2>
 <p>AOD-9604 (Advanced Obesity Drug) represents molecular surgery on growth hormone. Australian researchers at Monash University identified the 176-191 C-terminal region as responsible for GH's lipolytic effects, then added stabilizing modifications to create a fragment that stimulates lipolysis without growth hormone receptor binding. The result: a peptide that mimics GH's fat-mobilizing properties while completely avoiding effects on growth, glucose metabolism, or IGF-1—a clean separation impossible with full-length GH.</p><p>This selective action makes AOD-9604 invaluable for dissecting GH's metabolic effects. Researchers can investigate lipolytic signaling mechanisms, study adipocyte beta-oxidation, and explore growth hormone's metabolic functions without the confounding variables of receptor-mediated GH actions. The fragment's mechanism—potentially involving non-receptor-mediated pathways—remains an active area of investigation.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Lipolysis mechanism research</li><li>GH fragment biology</li><li>Lipid metabolism studies</li><li>Adipocyte signaling independent of GH receptor</li><li>Selective metabolic pathway activation</li><li>Non-receptor GH effects</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 30 days. The modifications provide enhanced stability compared to unmodified HGH fragments.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
