--- a/products/botulinum-100u.html
+++ b/products/botulinum-100u.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>100u</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>93384-43-1</td></tr>
 <tr><td>Molecular Weight</td><td>~150 kDa</td></tr>
 <tr><td>Molecular Formula</td><td>Protein complex</td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is Botulinum 100u?</h2>
 <p>Botulinum neurotoxin type A represents the gold standard for studying exocytosis. This large protein complex, produced by Clostridium botulinum, consists of a heavy chain (responsible for binding and internalization) and a light chain (the zinc-dependent endopeptidase that cleaves SNAP-25). By specifically cleaving SNAP-25—a protein essential for SNARE complex formation—BoNT/A prevents synaptic vesicles from fusing with the presynaptic membrane, completely blocking neurotransmitter release.</p><p>This exquisite molecular specificity makes botulinum toxin invaluable beyond its clinical applications. Researchers studying SNARE protein biology, investigating synaptic vesicle fusion mechanisms, exploring neuromuscular junction physiology, or dissecting the molecular machinery of exocytosis rely on BoNT/A's specific, irreversible SNAP-25 cleavage. The toxin serves as a molecular scalpel that precisely disrupts a single step in neurotransmitter release.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>SNARE protein biology</li><li>Synaptic vesicle fusion mechanisms</li><li>Neuromuscular junction research</li><li>Acetylcholine release studies</li><li>Exocytosis research</li><li>Presynaptic signaling</li><li>Metalloprotease mechanism studies</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C. Upon reconstitution, use immediately or store at 2-8°C for a maximum of 4 hours—this protein loses activity rapidly in solution. Handle with extreme care following institutional biosafety protocols.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
