--- a/products/cagrilintide.html
+++ b/products/cagrilintide.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>2374769-38-1</td></tr>
 <tr><td>Molecular Weight</td><td>4409.5 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>194</sub>H<sub>312</sub>N<sub>54</sub>O<sub>59</sub>S<sub>2</sub></td></tr>
@@ -95,18 +96,20 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Cagrilintide%205mg" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Cagrilintide 5mg?</h2>
-<p>Cagrilintide reimagines amylin pharmacology. While the first-generation amylin analogue pramlintide required frequent dosing and suffered from limited stability, Researchers structural modifications created a compound with dramatically extended receptor residence time and proteolytic resistance. This long-acting analogue enables researchers to study sustained amylin receptor activation—revealing roles for this often-overlooked hormone in metabolic regulation that short-acting compounds cannot illuminate.</p><p>Amylin, co-secreted with insulin from pancreatic beta cells, serves as a critical satiety signal and gastric motility regulator. Cagrilintide's enhanced pharmacokinetics make it ideal for investigating amylin receptor biology, the interplay between amylin and incretin pathways, and the therapeutic potential of sustained amylin agonism in metabolic disease models.</p>
+<p>Cagrilintide reimagines amylin pharmacology. While the first-generation amylin analogue pramlintide required frequent dosing and suffered from limited stability, Novo Nordisk's structural modifications created a compound with dramatically extended receptor residence time and proteolytic resistance. This long-acting analogue enables researchers to study sustained amylin receptor activation—revealing roles for this often-overlooked hormone in metabolic regulation that short-acting compounds cannot illuminate.</p><p>Amylin, co-secreted with insulin from pancreatic beta cells, serves as a critical satiety signal and gastric motility regulator. Cagrilintide's enhanced pharmacokinetics make it ideal for investigating amylin receptor biology, the interplay between amylin and incretin pathways, and the therapeutic potential of sustained amylin agonism in metabolic disease models.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Amylin receptor signaling research</li><li>Gastric emptying mechanisms</li><li>Satiety pathway studies</li><li>Pancreatic beta-cell co-secretion</li><li>Pramlintide comparison pharmacology</li><li>Calcitonin receptor family research</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C in sealed vial. Upon reconstitution, maintain refrigerated at 2-8°C and use within 30 days. The acylated structure provides exceptional stability compared to native amylin.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
