--- a/products/cjc-ipamorelin.html
+++ b/products/cjc-ipamorelin.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg/5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>Combination</td></tr>
 <tr><td>Molecular Weight</td><td>Dual compound</td></tr>
 <tr><td>Molecular Formula</td><td>Combined formulation</td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is CJC-1295/Ipamorelin?</h2>
 <p>Growth hormone release is governed by two parallel pathways: GHRH signaling through pituitary GHRH receptors, and ghrelin acting via GHS-R1a receptors. This combination recognizes that dual-pathway activation produces supra-additive effects—the GH pulse amplitude from combined GHRH/ghrelin agonism exceeds the sum of individual stimulation. The mechanism involves distinct intracellular signaling cascades that converge on GH granule release, with ghrelin potentially amplifying GHRH's effects through calcium mobilization.</p><p>Researchers studying GH secretion physiology, investigating secretagogue synergy, or modeling maximal endogenous GH release find this pre-optimized ratio invaluable. The combination eliminates dosing variables, ensuring consistent GHRH:ghrelin pathway stimulation across experiments—a critical factor in reproducible GH research.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Dual-pathway GH secretagogue studies</li><li>GHRH/ghrelin synergy mechanisms</li><li>Amplified GH pulse research</li><li>Combined secretagogue pharmacodynamics</li><li>Maximal endogenous GH release models</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C in sealed dual-chamber vial. Reconstitute both components simultaneously; maintain at 2-8°C and use within 30 days. Both peptides exhibit excellent co-stability in solution.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
