--- a/products/dsip-night-blend.html
+++ b/products/dsip-night-blend.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>Proprietary blend</td></tr>
 <tr><td>Molecular Weight</td><td>Multi-peptide</td></tr>
 <tr><td>Molecular Formula</td><td>Sleep complex</td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is DSIP Night Blend?</h2>
 <p>Sleep architecture involves layered neurochemical systems—GABAergic inhibition, serotonergic tone, melatonergic timing, and neuropeptide signaling all converge to orchestrate restorative sleep. This proprietary blend recognizes that complexity, combining DSIP with complementary peptides that target distinct but overlapping pathways in sleep-wake regulation. The formulation enables researchers to investigate multi-system sleep modulation in ways single-agent studies cannot capture.</p><p>Unlike crude sedative approaches, this blend mirrors the brain's endogenous sleep-promoting cascade—facilitating rather than forcing the transition to restorative sleep states. Chronobiology researchers studying circadian misalignment, sleep disorder pathophysiology, or the molecular architecture of sleep cycles find this combination invaluable for modeling natural sleep regulation.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Multi-peptide sleep architecture studies</li><li>Circadian entrainment mechanisms</li><li>Neurotransmitter interaction models in sleep</li><li>Restorative sleep pathway research</li><li>Sleep disorder neurochemistry</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from light and moisture. Reconstituted solution remains stable at 2-8°C for up to 30 days when stored properly. Single-use aliquoting recommended for repeated experiments.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
