--- a/products/foxo4-dri.html
+++ b/products/foxo4-dri.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>1639871-79-4</td></tr>
 <tr><td>Molecular Weight</td><td>~5040 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>D-retro-inverso</td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is FOXO4-DRI?</h2>
 <p>FOXO4-DRI represents molecular precision in anti-aging research. Senescent cells—aged cells that cease dividing but resist apoptosis—accumulate with age and secrete inflammatory factors (the senescence-associated secretory phenotype, SASP) that damage surrounding tissues. Dutch researchers discovered that in senescent cells, FOXO4 protein binds and sequesters p53, preventing p53-mediated apoptosis. FOXO4-DRI, a peptide mimicking the p53-binding domain of FOXO4, competitively disrupts this interaction—freeing p53 to trigger apoptosis specifically in senescent cells.</p><p>The D-retro-inverso modification—constructing the peptide from D-amino acids in reverse sequence—creates a molecule with identical binding surface topology but dramatically enhanced proteolytic stability. This senolytic approach—selectively eliminating senescent cells while sparing healthy ones—represents a targeted strategy for addressing cellular aging.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Senescent cell biology</li><li>FOXO4-p53 interaction studies</li><li>Senolytic mechanism research</li><li>Cellular aging models</li><li>Apoptosis pathway research</li><li>SASP modulation</li><li>Targeted cellular aging interventions</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from moisture. Upon reconstitution, maintain at 2-8°C and use within 30 days. D-amino acid peptides demonstrate exceptional proteolytic stability.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
