--- a/products/glutathione-1500mg.html
+++ b/products/glutathione-1500mg.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>1500mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>70-18-8</td></tr>
 <tr><td>Molecular Weight</td><td>307.3 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>10</sub>H<sub>17</sub>N<sub>3</sub>O<sub>6</sub>S</td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is Glutathione 1500mg?</h2>
 <p>Glutathione (γ-L-glutamyl-L-cysteinyl-glycine) represents the first line of antioxidant defense. This tripeptide, present in millimolar concentrations in cells, functions as the primary reducing agent that neutralizes reactive oxygen species before they damage proteins, lipids, or DNA. The peptide's cysteine thiol group (-SH) provides the reducing power—glutathione oscillates between reduced (GSH) and oxidized (GSSG) forms, with the GSH/GSSG ratio serving as a key indicator of cellular redox status.</p><p>Beyond direct antioxidant action, glutathione serves as a cofactor for glutathione peroxidases (which reduce hydrogen peroxide) and glutathione S-transferases (which detoxify electrophilic compounds and xenobiotics). This higher-dose preparation enables concentration-dependent studies and research requiring substantial glutathione supplementation in experimental models.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Redox biology</li><li>Oxidative stress models</li><li>Glutathione peroxidase studies</li><li>Cellular detoxification pathways</li><li>Thiol biochemistry</li><li>Xenobiotic metabolism</li><li>GSH/GSSG ratio studies</li><li>Antioxidant defense mechanisms</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from light and oxidizing conditions. Upon reconstitution with sterile water, use promptly or store at 2-8°C for up to 30 days. Glutathione oxidizes over time; fresh solutions provide optimal reducing capacity.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
