--- a/products/ipamorelin.html
+++ b/products/ipamorelin.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>170851-70-4</td></tr>
 <tr><td>Molecular Weight</td><td>711.9 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>38</sub>H<sub>49</sub>N<sub>9</sub>O<sub>5</sub></td></tr>
@@ -95,18 +96,20 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Ipamorelin" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Ipamorelin?</h2>
-<p>Ipamorelin solved a critical problem in growth hormone secretagogue research: earlier ghrelin mimetics like GHRP-6 and GHRP-2 stimulated GH release but also elevated prolactin and cortisol through off-target receptor activation. Researchers Ipamorelin, a carefully designed pentapeptide, demonstrates near-exclusive selectivity for the ghrelin receptor (GHS-R1a) on somatotrophs, triggering GH secretion without the hormonal side effects that confound experimental interpretation.</p><p>This selectivity makes ipamorelin the gold standard for dissecting ghrelin receptor pharmacology and GH secretion mechanisms. Researchers studying the distinction between GHRH-mediated and ghrelin-mediated GH release, or investigating selective GH secretagogue approaches, find this peptide essential for clean, interpretable results.</p>
+<p>Ipamorelin solved a critical problem in growth hormone secretagogue research: earlier ghrelin mimetics like GHRP-6 and GHRP-2 stimulated GH release but also elevated prolactin and cortisol through off-target receptor activation. Novo Nordisk's Ipamorelin, a carefully designed pentapeptide, demonstrates near-exclusive selectivity for the ghrelin receptor (GHS-R1a) on somatotrophs, triggering GH secretion without the hormonal side effects that confound experimental interpretation.</p><p>This selectivity makes ipamorelin the gold standard for dissecting ghrelin receptor pharmacology and GH secretion mechanisms. Researchers studying the distinction between GHRH-mediated and ghrelin-mediated GH release, or investigating selective GH secretagogue approaches, find this peptide essential for clean, interpretable results.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Ghrelin receptor (GHS-R1a) pharmacology</li><li>Selective GH secretion mechanisms</li><li>Growth hormone pulse dynamics</li><li>Somatotroph receptor selectivity</li><li>GHRP comparative studies</li><li>Non-GHRH secretagogue pathways</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, refrigerate at 2-8°C and utilize within 30 days. Ipamorelin demonstrates excellent stability in solution compared to earlier secretagogues.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
