--- a/products/laennec.html
+++ b/products/laennec.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Ampules</td></tr>
 <tr><td>Quantity</td><td>10 ampules</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>Placental extract</td></tr>
 <tr><td>Molecular Weight</td><td>Multi-factor complex</td></tr>
 <tr><td>Molecular Formula</td><td>>50 growth factors</td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is Laennec?</h2>
 <p>Laennec represents the biological complexity that single-molecule research cannot capture. This pharmaceutical-grade extract, derived from healthy human placenta and manufactured under strict Japanese pharmaceutical standards, contains a remarkably diverse array of bioactive molecules: multiple growth factor families (FGF, EGF, VEGF, HGF), cytokines, amino acids, vitamins, and minerals that collectively drive tissue regeneration. The placenta—nature's most rapidly growing temporary organ—concentrates factors that promote cell proliferation, angiogenesis, and tissue remodeling.</p><p>Unlike recombinant single-factor preparations, Laennec provides the factor combinations and ratios that occur naturally during development and healing. Researchers studying complex tissue regeneration, investigating growth factor synergies, or modeling multi-factor biological environments find this extract invaluable for capturing biological complexity that simplified systems miss.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Multi-growth factor signaling</li><li>Tissue regeneration models</li><li>Cytokine interaction studies</li><li>Complex biological system research</li><li>Angiogenesis with multiple factors</li><li>Cellular metabolism in growth factor-rich environments</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store refrigerated at 2-8°C in sealed ampules. Do not freeze—freezing damages the biological factor profile. Protect from direct light. Use immediately upon opening; no preservatives present. Stable 24 months unopened under proper refrigeration.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
