--- a/products/lipo-c-ultra.html
+++ b/products/lipo-c-ultra.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10ml</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>Premium blend</td></tr>
 <tr><td>Molecular Weight</td><td>Multi-component</td></tr>
 <tr><td>Molecular Formula</td><td>Complete metabolic</td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is Lipo-C Ultra Blend?</h2>
 <p>Lipo-C Ultra represents the apex of multi-component metabolic formulation. This premium blend incorporates every category of metabolic support compound: classic lipotropic factors for hepatic lipid processing, amino acids for protein synthesis and neurotransmitter production, mitochondrial cofactors for energy production, and performance-enhancing compounds for cellular optimization. The result: a research tool that enables investigation of fully-supported metabolic systems rather than isolated pathways.</p><p>Researchers exploring maximal metabolic capacity, investigating how multiple metabolic pathways integrate under optimal conditions, or studying comprehensive metabolic interventions find this formulation essential. The blend eliminates the limitation of single-factor studies, revealing system-level metabolic responses that emerge only when all necessary cofactors and substrates are available.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Comprehensive metabolic system research</li><li>Multi-pathway integration studies</li><li>Maximal metabolic capacity models</li><li>System-level bioenergetics</li><li>Performance optimization research</li><li>Complex metabolic phenotyping</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C in sealed container with desiccant. Upon reconstitution, maintain at 2-8°C and use within 30 days. Despite complexity, all components maintain stability in combined solution.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
