--- a/products/pe-22-28.html
+++ b/products/pe-22-28.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>Sortilin fragment</td></tr>
 <tr><td>Molecular Weight</td><td>Heptapeptide</td></tr>
 <tr><td>Molecular Formula</td><td>Spadin derivative</td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is PE 22-28?</h2>
 <p>PE 22-28 represents targeted neuroplasticity research. This heptapeptide, corresponding to amino acids 22-28 of the propeptide region of sortilin (a protein involved in neurotrophin sorting), was identified through research into spadin—an endogenous peptide with neuroprotective properties. PE 22-28 interacts with TREK-1 (TWIK-related potassium channel), a background potassium channel involved in neuronal excitability, synaptic plasticity, and stress response.</p><p>By modulating TREK-1 channel activity, PE 22-28 influences neuronal membrane potential and excitability, with downstream effects on neurotrophic signaling and synaptic remodeling. Research suggests this peptide may enhance neuroplasticity—the brain's capacity to reorganize synaptic connections—making it valuable for studying neuroadaptation, neuroprotection mechanisms, and the role of potassium channels in cognitive function.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>TREK-1 channel modulation</li><li>Neuroplasticity mechanisms</li><li>Neuroprotection studies</li><li>Potassium channel biology</li><li>Synaptic plasticity research</li><li>Neurogenesis studies</li><li>Neurotrophic signaling pathways</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 30 days. Standard peptide handling precautions apply.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
