--- a/products/retatrutide-20mg.html
+++ b/products/retatrutide-20mg.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>20mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>2381089-83-2</td></tr>
 <tr><td>Molecular Weight</td><td>4731.0 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>221</sub>H<sub>342</sub>N<sub>46</sub>O<sub>68</sub></td></tr>
@@ -95,18 +96,20 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Retatrutide%2020mg" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Retatrutide 20mg?</h2>
-<p>Retatrutide represents the frontier of incretin research. Building on tirzepatide's dual-agonist success, the developers scientists engineered this peptide with an unprecedented pharmacological profile: balanced activation of three distinct hormone receptors—GLP-1, GIP, and glucagon. This triple agonism creates a metabolic phenotype unattainable through any combination of existing compounds: incretin-mediated glucose regulation and appetite suppression, plus glucagon-driven energy expenditure.</p><p>The addition of glucagon receptor activity—traditionally avoided in metabolic therapies due to hyperglycemic concerns—proves synergistic when balanced with GLP-1 and GIP signaling. Researchers investigating energy balance, thermogenesis, complex metabolic pathway interactions, or next-generation incretin pharmacology find retatrutide essential for exploring multi-receptor agonism strategies.</p>
+<p>Retatrutide represents the frontier of incretin research. Building on tirzepatide's dual-agonist success, Eli Lilly scientists engineered this peptide with an unprecedented pharmacological profile: balanced activation of three distinct hormone receptors—GLP-1, GIP, and glucagon. This triple agonism creates a metabolic phenotype unattainable through any combination of existing compounds: incretin-mediated glucose regulation and appetite suppression, plus glucagon-driven energy expenditure.</p><p>The addition of glucagon receptor activity—traditionally avoided in metabolic therapies due to hyperglycemic concerns—proves synergistic when balanced with GLP-1 and GIP signaling. Researchers investigating energy balance, thermogenesis, complex metabolic pathway interactions, or next-generation incretin pharmacology find retatrutide essential for exploring multi-receptor agonism strategies.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Triple-receptor agonism studies</li><li>GLP-1/GIP/glucagon pathway synergy</li><li>Energy expenditure mechanisms</li><li>Complex metabolic signaling</li><li>Thermogenesis research</li><li>Next-generation incretin biology</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from moisture. Reconstitute with bacteriostatic water; stable at 2-8°C for 30 days. Handle with care—this represents one of the most complex peptide agonists in metabolic research.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
