--- a/products/selank-5mg.html
+++ b/products/selank-5mg.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>129954-34-3</td></tr>
 <tr><td>Molecular Weight</td><td>751.9 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>33</sub>H<sub>57</sub>N<sub>11</sub>O<sub>9</sub></td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is Selank 5mg?</h2>
 <p>Developed at Moscow's Institute of Molecular Genetics, Selank represents a rational design approach to neuropeptide therapeutics—a synthetic heptapeptide built upon the immune peptide tuftsin's structural scaffold. This derivative demonstrates the rare capacity to simultaneously modulate IL-6 expression and influence monoaminergic neurotransmitter systems, bridging neuroimmune signaling in ways few compounds can. Its dual action on GABA and serotonin pathways has positioned it as a cornerstone tool in anxiety neurobiology research.</p><p>Researchers investigating the intersection of immune signaling and behavioral neuroscience find Selank indispensable. Over two decades of Russian neurochemical research have characterized its mechanism across multiple systems, making it one of the most comprehensively studied synthetic anxiolytics in contemporary neuropharmacology.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Anxiety model studies</li><li>Cognitive function research</li><li>Immune-neuro axis modulation</li><li>GABAergic pathway studies</li><li>Stress response mechanisms</li><li>Cytokine regulation research</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C in sealed vial. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and utilize within 30 days. Avoid freeze-thaw cycles to preserve peptide integrity.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
