--- a/products/semaglutide.html
+++ b/products/semaglutide.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>910463-68-2</td></tr>
 <tr><td>Molecular Weight</td><td>4113.6 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>187</sub>H<sub>291</sub>N<sub>45</sub>O<sub>59</sub></td></tr>
@@ -95,18 +96,20 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Semaglutide" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Semaglutide?</h2>
-<p>Semaglutide represents the culmination of decades of incretin biology research. Scientists engineered this glucagon-like peptide-1 analogue with a strategic fatty acid modification that enables albumin binding, dramatically extending its half-life from minutes to days. This single molecular modification transformed GLP-1 from a rapidly degraded hormone into a sustained metabolic signaling tool, enabling researchers to study prolonged GLP-1 receptor activation without the confounding variables of pulsatile dosing.</p><p>The compound's potency at GLP-1 receptors—combined with its resistance to DPP-4 degradation—has made it the gold standard in metabolic research models. Studies investigating glucose homeostasis, pancreatic beta-cell function, appetite regulation via hypothalamic pathways, and incretin receptor pharmacology consistently rely on semaglutide as the reference GLP-1 agonist.</p>
+<p>Semaglutide represents the culmination of decades of incretin biology research. Novo Nordisk's scientists engineered this glucagon-like peptide-1 analogue with a strategic fatty acid modification that enables albumin binding, dramatically extending its half-life from minutes to days. This single molecular modification transformed GLP-1 from a rapidly degraded hormone into a sustained metabolic signaling tool, enabling researchers to study prolonged GLP-1 receptor activation without the confounding variables of pulsatile dosing.</p><p>The compound's potency at GLP-1 receptors—combined with its resistance to DPP-4 degradation—has made it the gold standard in metabolic research models. Studies investigating glucose homeostasis, pancreatic beta-cell function, appetite regulation via hypothalamic pathways, and incretin receptor pharmacology consistently rely on semaglutide as the reference GLP-1 agonist.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>GLP-1 receptor binding and signaling studies</li><li>Glucose homeostasis mechanisms</li><li>Pancreatic beta-cell function research</li><li>Appetite regulation pathways</li><li>Incretin pharmacology</li><li>Metabolic disease models</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from light. Upon reconstitution with bacteriostatic water, store at 2-8°C and use within 30 days. The acylated structure provides enhanced stability compared to native GLP-1.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
