--- a/products/tirzepatide-20mg.html
+++ b/products/tirzepatide-20mg.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>20mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>2023788-19-2</td></tr>
 <tr><td>Molecular Weight</td><td>4813.5 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>225</sub>H<sub>348</sub>N<sub>48</sub>O<sub>68</sub></td></tr>
@@ -95,18 +96,20 @@
 <a href="mailto:support@prcpeptides.com?subject=COA%20Request%3A%20Tirzepatide%2020mg" class="btn-secondary">Request COA</a>
 </div>
 <h2>What is Tirzepatide 20mg?</h2>
-<p>Tirzepatide represents a paradigm shift in incretin biology. Where previous research focused on single-receptor agonism, the developers scientists engineered this novel peptide to activate both glucose-dependent insulinotropic polypeptide (GIP) and glucagon-like peptide-1 (GLP-1) receptors with balanced potency. The compound's structure—based on the native GIP sequence with modifications that confer GLP-1 activity—creates a dual agonist profile impossible to achieve with natural hormones.</p><p>This dual incretin activation reveals synergistic metabolic effects: GIP enhances insulin secretion and may support beta-cell health, while GLP-1 provides appetite suppression and delays gastric emptying. Researchers studying incretin receptor cross-talk, synergistic metabolic signaling, or the distinct contributions of GIP versus GLP-1 pathways find tirzepatide indispensable for dissecting complex incretin physiology.</p>
+<p>Tirzepatide represents a paradigm shift in incretin biology. Where previous research focused on single-receptor agonism, Eli Lilly scientists engineered this novel peptide to activate both glucose-dependent insulinotropic polypeptide (GIP) and glucagon-like peptide-1 (GLP-1) receptors with balanced potency. The compound's structure—based on the native GIP sequence with modifications that confer GLP-1 activity—creates a dual agonist profile impossible to achieve with natural hormones.</p><p>This dual incretin activation reveals synergistic metabolic effects: GIP enhances insulin secretion and may support beta-cell health, while GLP-1 provides appetite suppression and delays gastric emptying. Researchers studying incretin receptor cross-talk, synergistic metabolic signaling, or the distinct contributions of GIP versus GLP-1 pathways find tirzepatide indispensable for dissecting complex incretin physiology.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Dual incretin pathway research</li><li>GIP/GLP-1 receptor synergy</li><li>Incretin receptor pharmacology</li><li>Metabolic signaling cascade studies</li><li>Pancreatic islet function</li><li>Comparative incretin biology</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C in sealed container. Reconstitute with bacteriostatic water; maintain at 2-8°C for up to 30 days. The fatty acid modification provides proteolytic resistance and extended stability.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
