--- a/products/vitamin-c-iv.html
+++ b/products/vitamin-c-iv.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Solution</td></tr>
 <tr><td>Quantity</td><td>10mg/20ml</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>50-81-7</td></tr>
 <tr><td>Molecular Weight</td><td>176.1 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>6</sub>H<sub>8</sub>O<sub>6</sub></td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is Vitamin C IV?</h2>
 <p>L-Ascorbic acid (vitamin C) serves multiple critical biochemical roles beyond its well-known antioxidant function. As a cofactor for prolyl and lysyl hydroxylases, ascorbate is absolutely required for collagen triple helix stability—without adequate vitamin C, collagen synthesis fails, manifesting as scurvy. The vitamin also serves as cofactor for dopamine β-hydroxylase (converting dopamine to norepinephrine) and other copper-containing monooxygenases essential for neurotransmitter synthesis.</p><p>As an antioxidant, ascorbate directly reduces reactive oxygen species and serves as the first line of defense in aqueous environments. It functions synergistically with vitamin E by reducing tocopheroxyl radicals back to active tocopherol, linking water-soluble and lipid-soluble antioxidant systems. This pharmaceutical-grade injectable preparation enables precise dosing in controlled research applications.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Collagen hydroxylation research</li><li>Ascorbate-dependent enzyme studies</li><li>Antioxidant mechanism research</li><li>Iron metabolism</li><li>Neurotransmitter synthesis pathways</li><li>Immune cell function studies</li><li>Vitamin C-dependent biochemistry</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store refrigerated at 2-8°C protected from light (photosensitive). Use within 14 days after opening. Ascorbic acid oxidizes in solution over time; fresh preparations provide optimal activity. Do not freeze.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
