--- a/products/ara-290.html
+++ b/products/ara-290.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>1448671-31-5</td></tr>
 <tr><td>Molecular Weight</td><td>1257.3 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>51</sub>H<sub>84</sub>N<sub>16</sub>O<sub>21</sub></td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is ARA-290?</h2>
 <p>ARA-290 represents molecular refinement of erythropoietin's tissue-protective properties. While full-length EPO stimulates red blood cell production through the classical EPO receptor, it also activates a distinct receptor complex called the innate repair receptor (IRR or tissue-protective receptor)—a heteromeric complex that triggers cell protection, reduces inflammation, and promotes tissue repair. ARA-290, an 11-amino acid EPO-derived peptide, selectively activates the IRR without engaging the erythropoietic EPO receptor.</p><p>This separation of functions enables clean investigation of EPO's tissue-protective mechanisms without the confounding hematological effects. Research has demonstrated ARA-290's effects in neuropathy models, ischemia-reperfusion injury, and inflammatory conditions—all mediated through IRR signaling pathways distinct from classical EPO effects. The peptide provides a unique tool for studying tissue protection mechanisms and innate repair receptor biology.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Innate repair receptor signaling</li><li>Tissue protection mechanisms</li><li>EPO receptor biology</li><li>Neuroprotection studies</li><li>Anti-inflammatory pathways</li><li>Ischemia-reperfusion injury models</li><li>Diabetic neuropathy research</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 30 days. This peptide demonstrates good stability in solution.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
