--- a/products/bpc-157-tb-500.html
+++ b/products/bpc-157-tb-500.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg/10mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>137525-51-0</td></tr>
 <tr><td>Molecular Weight</td><td>1419.5 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>62</sub>H<sub>98</sub>N<sub>16</sub>O<sub>22</sub></td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is BPC-157/TB-500?</h2>
 <p>Tissue repair requires coordinated processes: inflammatory resolution, angiogenesis, cell migration, extracellular matrix remodeling, and cytoprotection. This combination targets multiple phases simultaneously. BPC-157, a pentadecapeptide partial sequence of the body protection compound isolated from gastric juice, demonstrates remarkable cytoprotective properties in mucosal tissue while promoting angiogenesis through VEGF modulation. TB-500 (Thymosin Beta-4 fragment) facilitates actin polymerization and cytoskeletal reorganization, driving cell migration to injury sites and promoting extracellular matrix formation.</p><p>Their mechanisms complement: BPC-157 protects existing tissue and stimulates new vessel formation, while TB-500 mobilizes repair cells and promotes structural regeneration. With hundreds of published studies investigating each peptide individually, researchers increasingly combine them to model multi-phase tissue healing—from acute injury response through complete structural restoration.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Wound healing models</li><li>Angiogenesis research</li><li>Cytoprotection mechanisms</li><li>Cell migration assays</li><li>Collagen synthesis studies</li><li>Anti-inflammatory pathway research</li><li>Musculoskeletal repair models</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from moisture. Both peptides remain stable when co-reconstituted; maintain at 2-8°C and use within 30 days. Compatible in the same solution without interaction.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
