--- a/products/cerebrolysin.html
+++ b/products/cerebrolysin.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>60mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>Neuropeptide complex</td></tr>
 <tr><td>Molecular Weight</td><td><10 kDa peptides</td></tr>
 <tr><td>Molecular Formula</td><td>Multi-peptide</td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is Cerebrolysin?</h2>
 <p>Cerebrolysin stands apart in neuroprotection research: where most compounds target a single pathway, this pharmaceutical-grade preparation contains a complex mixture of low-molecular-weight neuropeptides and amino acids derived from porcine brain tissue. The result is a biological profile that simultaneously activates multiple neurotrophic signaling cascades—mimicking BDNF, NGF, CNTF, and GDNF pathways that govern neuroplasticity, cell survival, and synaptic remodeling.</p><p>Developed in Austria and extensively studied across European and Asian research institutions, Cerebrolysin has accumulated over 300 published studies in neurodegenerative disease models, stroke recovery, and traumatic brain injury research. Its mechanism—providing exogenous neurotrophic support when endogenous systems fail—makes it irreplaceable in neuroprotection studies where single-target interventions prove insufficient.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Multi-pathway neuroprotection</li><li>Neurodegenerative disease models</li><li>Post-stroke neuroplasticity</li><li>Synaptic preservation studies</li><li>Neurotrophic factor signaling</li><li>Cognitive impairment research</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store refrigerated at 2-8°C in original sealed ampules. Do not freeze. Protect from direct light. Use immediately upon opening; this product does not contain preservatives. Stable unopened for 24 months under proper conditions.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
