--- a/products/dermorphin.html
+++ b/products/dermorphin.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>77614-16-5</td></tr>
 <tr><td>Molecular Weight</td><td>802.9 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>40</sub>H<sub>50</sub>N<sub>8</sub>O<sub>10</sub></td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is Dermorphin?</h2>
 <p>Dermorphin stands as one of pharmacology's most intriguing discoveries. Isolated from the skin secretions of South American Phyllomedusa frogs, this heptapeptide contains an unusual D-alanine in position 2—one of the rare instances of D-amino acids in biologically active peptides. This structural quirk contributes to dermorphin's exceptional properties: nanomolar μ-opioid receptor affinity, selectivity ratios exceeding 1000:1 for μ over δ and κ receptors, and resistance to peptidase degradation.</p><p>The peptide's extraordinary selectivity and potency have made it an essential tool in opioid receptor biology—enabling precise study of μ-opioid receptor pharmacology, structure-activity relationships, and receptor-ligand interactions. Researchers investigating opioid signaling mechanisms, studying receptor binding kinetics, or exploring the structural determinants of receptor selectivity consistently rely on dermorphin as a reference μ-selective agonist.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>μ-opioid receptor pharmacology</li><li>Receptor subtype selectivity studies</li><li>Opioid receptor binding kinetics</li><li>Structure-activity relationships</li><li>Receptor signaling mechanisms</li><li>D-amino acid peptide biology</li><li>Opioid tolerance mechanisms</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from moisture and light. Upon reconstitution with sterile or bacteriostatic water, maintain at 2-8°C and use within 30 days. The D-amino acid provides proteolytic resistance.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
