--- a/products/dsip.html
+++ b/products/dsip.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>62568-57-4</td></tr>
 <tr><td>Molecular Weight</td><td>848.8 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>35</sub>H<sub>48</sub>N<sub>10</sub>O<sub>15</sub></td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is DSIP?</h2>
 <p>Delta Sleep-Inducing Peptide represents a landmark discovery in chronobiology. Isolated from the cerebral venous blood of sleeping rabbits in 1977 by Swiss researchers Schoenenberger and Monnier, DSIP opened scientific inquiry into endogenous sleep architecture modulation. Unlike sedatives that suppress neural activity, this nonapeptide appears to facilitate natural sleep-wake transitions through circadian rhythm entrainment and stress hormone regulation.</p><p>The peptide's mechanism extends beyond simple sleep induction: it modulates stress response systems, exhibits analgesic properties in pain perception studies, and demonstrates cortisol-regulating effects that have made it valuable in neuroendocrine research. Decades of investigation have revealed DSIP's subtle, multi-system influence—acting more as a biological rhythm optimizer than a traditional sleep agent.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Sleep architecture studies</li><li>Circadian rhythm regulation</li><li>Stress-response neuroendocrine pathways</li><li>Pain perception modulation</li><li>Cortisol dynamics research</li><li>Delta wave sleep mechanisms</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C in amber vial to protect from light degradation. Upon reconstitution, store refrigerated (2-8°C) and utilize within 30 days for optimal peptide stability.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
