--- a/products/epithalon.html
+++ b/products/epithalon.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>50mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>307297-39-8</td></tr>
 <tr><td>Molecular Weight</td><td>390.3 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>14</sub>H<sub>22</sub>N<sub>4</sub>O<sub>9</sub></td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is Epithalon?</h2>
 <p>Epithalon (Epitalon, Ala-Glu-Asp-Gly) emerged from decades of Russian gerontology research led by Professor Vladimir Khavinson. This tetrapeptide, designed to replicate bioactive sequences from the pineal peptide epithalamin, demonstrates two remarkable properties in experimental models: activation of telomerase (the enzyme that maintains telomere length) and modulation of circadian rhythms through melatonin regulation. These dual mechanisms position Epithalon at the intersection of cellular aging and chronobiology research.</p><p>Telomeres—the protective caps on chromosome ends—shorten with each cell division, eventually triggering senescence. Telomerase can extend telomeres, but most somatic cells suppress this enzyme. Epithalon's apparent ability to transiently activate telomerase in adult tissues has driven extensive research into its mechanism and potential for studying telomere biology and cellular aging interventions.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Telomerase activity research</li><li>Telomere biology</li><li>Circadian rhythm regulation</li><li>Pineal peptide research</li><li>Cellular aging mechanisms</li><li>Melatonin regulation studies</li><li>Longevity pathway research</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 30 days. This short peptide demonstrates good stability in solution.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
