--- a/products/ghk-cu.html
+++ b/products/ghk-cu.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>100mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>49557-75-7</td></tr>
 <tr><td>Molecular Weight</td><td>404.0 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>14</sub>H<sub>24</sub>N<sub>6</sub>O<sub>4</sub>·Cu</td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is GHK-Cu?</h2>
 <p>Glycyl-L-Histidyl-L-Lysine bound to copper represents one of nature's elegant metal-mediated signaling systems. First isolated from human plasma in the 1970s by Dr. Loren Pickart, GHK-Cu demonstrates the biological importance of copper-peptide coordination chemistry. The copper ion, precisely positioned by the peptide's histidine and terminal amine, activates the complex's biological functions: stimulating collagen and glycosaminoglycan synthesis, modulating metalloproteinase activity for balanced extracellular matrix remodeling, and providing localized antioxidant effects.</p><p>GHK-Cu's plasma concentration declines with age, correlating with diminished tissue repair capacity—a relationship that has driven extensive research into its role in wound healing, dermal remodeling, and tissue regeneration. The peptide's ability to simultaneously promote matrix synthesis and regulate degradation makes it irreplaceable in studies of balanced tissue remodeling.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Collagen synthesis mechanisms</li><li>Metalloproteinase regulation</li><li>Copper-dependent enzyme research</li><li>Extracellular matrix remodeling</li><li>Wound healing biology</li><li>Antioxidant copper chemistry</li><li>Tissue regeneration models</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from light (copper complexes are photosensitive). Reconstitute with sterile water; the copper complex remains stable at 2-8°C for 30 days. Avoid oxidizing agents.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
