--- a/products/hgh-fragment-191.html
+++ b/products/hgh-fragment-191.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>12629-01-5</td></tr>
 <tr><td>Molecular Weight</td><td>22124 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>990</sub>H<sub>1528</sub>N<sub>262</sub>O<sub>300</sub>S<sub>7</sub></td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is HGH Fragment 191?</h2>
 <p>This represents human somatotropin in its native form: 191 amino acids in the precise sequence and tertiary structure found in pituitary-derived growth hormone. Produced through recombinant DNA technology in E. coli expression systems, this rHGH is structurally indistinguishable from endogenous GH, making it the unambiguous choice for studying growth hormone receptor binding, GH-mediated signal transduction, and the direct effects of somatotropin on target tissues.</p><p>Where secretagogues provide indirect GH elevation through endogenous release, direct GH administration enables precise dose-response studies, receptor saturation experiments, and investigation of GH signaling independent of pituitary function. With over four decades of research characterizing GH's effects on IGF-1 production, lipolysis, protein synthesis, and tissue remodeling, this molecule remains central to endocrine and metabolic research.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>GH receptor binding and signaling</li><li>IGF-1 pathway research</li><li>Somatotropin receptor pharmacology</li><li>Anabolic signaling mechanisms</li><li>Direct GH effects vs. secretagogue comparison</li><li>Protein synthesis research</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from light. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 14 days—shorter than peptide secretagogues due to protein aggregation susceptibility. Avoid agitation; gently swirl to dissolve.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
