--- a/products/kpv.html
+++ b/products/kpv.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>61090-95-7</td></tr>
 <tr><td>Molecular Weight</td><td>342.4 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>16</sub>H<sub>30</sub>N<sub>4</sub>O<sub>4</sub></td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is KPV?</h2>
 <p>KPV (Lysine-Proline-Valine) represents molecular dissection of anti-inflammatory signaling. As the C-terminal tripeptide of alpha-melanocyte stimulating hormone, KPV retains the parent molecule's remarkable anti-inflammatory properties while eliminating melanocortin receptor-mediated effects like pigmentation. This separation of functions makes KPV uniquely valuable: it modulates inflammatory gene transcription through NF-κB pathway inhibition and reduces pro-inflammatory cytokine production without the broader melanocortin system effects.</p><p>Research has demonstrated KPV's effectiveness in inflammatory bowel disease models, dermal inflammation studies, and wound healing research where inflammation must be controlled without suppressing the entire immune response. Its ability to penetrate epithelial barriers and concentrate in inflamed tissues makes it particularly relevant for mucosal inflammation research.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>NF-κB signaling inhibition</li><li>Inflammatory cytokine modulation</li><li>Inflammatory bowel disease models</li><li>Mucosal immunity research</li><li>Wound healing inflammation control</li><li>Melanocortin peptide fragment studies</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 30 days. This small peptide demonstrates excellent stability in solution.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
