--- a/products/l-carnitine.html
+++ b/products/l-carnitine.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>600mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>541-15-1</td></tr>
 <tr><td>Molecular Weight</td><td>161.2 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>7</sub>H<sub>15</sub>NO<sub>3</sub></td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is L-Carnitine?</h2>
 <p>L-Carnitine (β-hydroxy-γ-trimethylaminobutyric acid) solves a fundamental problem in cellular energetics: long-chain fatty acids cannot cross the inner mitochondrial membrane where beta-oxidation occurs. Carnitine serves as the shuttle—the carnitine palmitoyltransferase (CPT) system conjugates fatty acids to carnitine, transports them across the membrane, then releases them inside the mitochondrial matrix. Without adequate carnitine, long-chain fatty acids cannot be oxidized for energy, regardless of other metabolic factors.</p><p>This bottleneck role makes L-carnitine fundamental to metabolic research. Studies of mitochondrial fatty acid oxidation, investigation of the carnitine shuttle mechanism, research into acyl-carnitine species as metabolic biomarkers, and exploration of carnitine's role in various metabolic states all require this essential cofactor.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Mitochondrial fatty acid transport</li><li>Beta-oxidation mechanisms</li><li>Carnitine shuttle system research</li><li>Acyl-carnitine metabolism</li><li>Energy substrate utilization</li><li>Mitochondrial function studies</li><li>Carnitine deficiency models</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water or sterile water, refrigerate at 2-8°C and use within 30 days. L-Carnitine demonstrates excellent solution stability.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
