--- a/products/ll-37.html
+++ b/products/ll-37.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>154947-66-7</td></tr>
 <tr><td>Molecular Weight</td><td>4493.3 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>205</sub>H<sub>340</sub>N<sub>60</sub>O<sub>53</sub></td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is LL-37?</h2>
 <p>LL-37 occupies a unique position in human immunology: it is the only antimicrobial peptide produced by the human cathelicidin family, unlike other species that express multiple cathelicidin variants. Cleaved from the C-terminus of the hCAP18 precursor protein, this amphipathic alpha-helical peptide demonstrates broad-spectrum antimicrobial activity against bacteria, fungi, and enveloped viruses through membrane disruption. Beyond direct antimicrobial action, LL-37 exhibits immunomodulatory functions—recruiting immune cells, modulating inflammatory responses, and promoting wound closure.</p><p>Expression of LL-37 is induced by vitamin D, linking nutritional status to innate immune capacity—a relationship that has made this peptide central to research on vitamin D-dependent immunity. Its multi-functional profile (antimicrobial, chemotactic, angiogenic, and wound-healing) makes LL-37 essential for studying the complex roles of antimicrobial peptides beyond simple pathogen killing.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Antimicrobial mechanism studies</li><li>Innate immunity research</li><li>Membrane disruption models</li><li>Biofilm penetration research</li><li>Immune cell chemotaxis</li><li>Wound healing immunity</li><li>Vitamin D-dependent peptide regulation</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C. Upon reconstitution, maintain at 2-8°C and use within 30 days. The amphipathic structure requires gentle handling to prevent aggregation at higher concentrations.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
