--- a/products/mots-c.html
+++ b/products/mots-c.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>1627580-64-6</td></tr>
 <tr><td>Molecular Weight</td><td>2174.6 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>101</sub>H<sub>152</sub>N<sub>28</sub>O<sub>22</sub>S<sub>2</sub></td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is MOTS-c?</h2>
 <p>MOTS-c represents a paradigm shift in cellular biology. Discovered in 2015 by researchers at USC, this peptide revealed that the mitochondrial genome—long thought to encode only 13 proteins—contains open reading frames for signaling peptides that regulate nuclear gene expression. MOTS-c, encoded within the mitochondrial 12S rRNA gene, acts as a mitochondrial-to-nuclear messenger: during metabolic stress, it translocates to the nucleus and binds DNA regulatory regions, modulating expression of genes involved in glucose metabolism and insulin sensitivity.</p><p>This mitochondrial-nuclear communication pathway challenges traditional views of metabolic regulation. MOTS-c activates AMPK, enhances glucose uptake, and improves metabolic flexibility—effects that position it at the intersection of aging research, metabolic disease modeling, and the study of retrograde signaling from mitochondria to nucleus.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Mitochondrial-nuclear signaling</li><li>Metabolic homeostasis mechanisms</li><li>AMPK pathway research</li><li>Insulin sensitivity studies</li><li>Mitochondrial genome function</li><li>Retrograde signaling research</li><li>Exercise mimetic studies</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from moisture. Reconstitute with bacteriostatic water; stable at 2-8°C for 30 days. Handle as a standard peptide despite its mitochondrial origin.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
