--- a/products/nad-1000mg.html
+++ b/products/nad-1000mg.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>1000mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>53-84-9</td></tr>
 <tr><td>Molecular Weight</td><td>663.4 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>21</sub>H<sub>27</sub>N<sub>7</sub>O<sub>14</sub>P<sub>2</sub></td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is NAD+ 1000mg?</h2>
 <p>Nicotinamide adenine dinucleotide occupies a position of unparalleled importance in cellular biochemistry. This dinucleotide serves simultaneously as an electron carrier in redox reactions (the NAD+/NADH couple drives glycolysis, the TCA cycle, and oxidative phosphorylation), a substrate for sirtuins (deacetylases that regulate metabolism and longevity pathways), a substrate for PARPs (DNA repair enzymes), and a precursor for calcium signaling molecules. Without adequate NAD+, cellular energy production, gene expression regulation, and DNA maintenance all collapse.</p><p>NAD+ levels decline with age across tissues, correlating with metabolic dysfunction and cellular senescence—a relationship that has positioned NAD+ at the center of aging research. Studies investigating sirtuins, researching cellular energy metabolism, exploring DNA repair mechanisms, or modeling age-related NAD+ decline require direct NAD+ administration or measurement.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Redox biochemistry</li><li>Sirtuin activation research</li><li>Cellular energy metabolism</li><li>PARP enzyme function</li><li>Mitochondrial studies</li><li>NAD+/NADH ratio measurement</li><li>Cellular aging mechanisms</li><li>DNA repair pathways</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from light (NAD+ is photosensitive). Upon reconstitution with sterile water, use immediately or store at 2-8°C for up to 30 days. Avoid repeated freeze-thaw cycles which degrade the dinucleotide.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
