--- a/products/pt-141.html
+++ b/products/pt-141.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>189691-06-3</td></tr>
 <tr><td>Molecular Weight</td><td>1025.2 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>50</sub>H<sub>68</sub>N<sub>14</sub>O<sub>10</sub></td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is PT-141?</h2>
 <p>PT-141 emerged from structure-activity relationship studies of Melanotan II, a synthetic α-MSH analogue. While Melanotan II activates multiple melanocortin receptor subtypes (MC1R through MC5R), its metabolite PT-141 demonstrates preferential activity at MC3R and MC4R with reduced MC1R activation—eliminating much of the pigmentation effect while retaining central melanocortin activity. This selectivity makes PT-141 invaluable for dissecting the distinct roles of melanocortin receptor subtypes.</p><p>MC3R and MC4R, expressed primarily in the hypothalamus, regulate energy balance, autonomic function, and motivated behaviors through melanocortin signaling. PT-141 enables researchers to study these central melanocortin pathways without the confounding peripheral effects of broader melanocortin activation, making it the preferred tool for investigating hypothalamic melanocortin biology.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Melanocortin receptor subtype pharmacology</li><li>MC3R/MC4R signaling research</li><li>Central melanocortin pathway studies</li><li>Receptor selectivity research</li><li>Hypothalamic signaling mechanisms</li><li>Melanocortin system biology</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 30 days. The cyclic structure provides enhanced proteolytic stability.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
