--- a/products/semax.html
+++ b/products/semax.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>80714-61-0</td></tr>
 <tr><td>Molecular Weight</td><td>813.9 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>37</sub>H<sub>51</sub>N<sub>9</sub>O<sub>10</sub>S</td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is Semax?</h2>
 <p>Semax emerged from the same Moscow laboratory that produced Selank, but with an entirely different objective: augmenting cognitive capacity through neurotrophic upregulation. This heptapeptide analogue of the ACTH(4-10) fragment demonstrates a mechanism rare among small peptides—it crosses the blood-brain barrier intact and directly increases brain-derived neurotrophic factor expression in cortical and hippocampal regions. The result: enhanced neuroplasticity, improved dopaminergic and serotonergic tone, and measurable effects on memory consolidation in experimental models.</p><p>Where most nootropics rely on neurotransmitter modulation alone, Semax operates upstream—influencing the very production of proteins that govern synaptic remodeling. Its effects on cerebrovascular function have made it a staple in stroke recovery research, while cognitive neuroscientists value its ability to enhance working memory without stimulant-like side effects.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>BDNF upregulation research</li><li>Cognitive enhancement models</li><li>Neuroprotection studies</li><li>Cerebrovascular function research</li><li>Attention and memory mechanisms</li><li>Stroke recovery pathways</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from light. Reconstitute with bacteriostatic or sterile water; maintain at 2-8°C and use within 30 days. This peptide exhibits enhanced stability compared to unmodified ACTH fragments.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
