--- a/products/sermorelin.html
+++ b/products/sermorelin.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>5mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>86168-78-7</td></tr>
 <tr><td>Molecular Weight</td><td>3357.9 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>149</sub>H<sub>246</sub>N<sub>44</sub>O<sub>42</sub>S</td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is Sermorelin?</h2>
 <p>Sermorelin represents elegant peptide design: by identifying the minimal bioactive sequence within full-length GHRH(1-44), researchers created a compound with identical receptor activity but enhanced stability and reduced immunogenicity. This 29-amino acid fragment contains the entire receptor-binding domain, making it indispensable for studying GHRH receptor pharmacology without the complications of the full 44-residue hormone.</p><p>The peptide binds selectively to GHRH receptors on pituitary somatotrophs, triggering endogenous growth hormone release through natural pulsatile mechanisms. Unlike exogenous growth hormone administration, sermorelin preserves the physiological feedback loops governing GH secretion, making it the preferred tool for studying growth hormone axis regulation, pituitary function, and the upstream control of IGF-1 production.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>GHRH receptor binding studies</li><li>Pituitary somatotroph function</li><li>Growth hormone secretion dynamics</li><li>Pulsatile GH release mechanisms</li><li>IGF-1 pathway research</li><li>Growth hormone axis physiology</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from light. Reconstitute with bacteriostatic water; maintain at 2-8°C and use within 30 days. The truncated structure provides improved stability versus full-length GHRH.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
