--- a/products/ss-31.html
+++ b/products/ss-31.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>736992-21-5</td></tr>
 <tr><td>Molecular Weight</td><td>639.8 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>32</sub>H<sub>49</sub>N<sub>9</sub>O<sub>5</sub></td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is SS-31?</h2>
 <p>SS-31 (Szeto-Schiller peptide 31, D-Arg-Dmt-Lys-Phe-NH2) represents a breakthrough in mitochondria-targeted therapeutics. This cell-permeable tetrapeptide contains alternating cationic and aromatic residues that enable it to penetrate cells and selectively accumulate at the inner mitochondrial membrane, where it binds with high affinity to cardiolipin—the signature phospholipid of mitochondrial membranes. This cardiolipin interaction stabilizes cristae architecture, the elaborately folded inner membrane structures that house the electron transport chain.</p><p>Unlike broad antioxidants, SS-31 concentrates precisely where mitochondrial ROS are generated—at the electron transport chain. By optimizing cristae structure and reducing electron leak, SS-31 decreases reactive oxygen species production at the source while preserving mitochondrial membrane potential and ATP synthesis. This mechanism has made SS-31 invaluable in ischemia-reperfusion research, neurodegenerative disease models, and studies of mitochondrial dysfunction.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Mitochondrial membrane research</li><li>Cardiolipin interaction studies</li><li>Cristae structure biology</li><li>Mitochondrial ROS modulation</li><li>Ischemia-reperfusion models</li><li>Mitochondrial bioenergetics</li><li>Targeted mitochondrial protection</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from light. Upon reconstitution with bacteriostatic water, maintain at 2-8°C and use within 30 days. The aromatic-cationic structure provides excellent peptide stability.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
