--- a/products/thioctic-acid.html
+++ b/products/thioctic-acid.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Solution</td></tr>
 <tr><td>Quantity</td><td>25mg/5ml</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>1077-28-7</td></tr>
 <tr><td>Molecular Weight</td><td>206.3 g/mol</td></tr>
 <tr><td>Molecular Formula</td><td>C<sub>8</sub>H<sub>14</sub>O<sub>2</sub>S<sub>2</sub></td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is Thioctic Acid?</h2>
 <p>Alpha-lipoic acid (1,2-dithiolane-3-pentanoic acid) occupies a unique position in antioxidant biology: its amphipathic structure allows it to scavenge reactive species in both water-soluble compartments (cytoplasm) and lipid-rich environments (membranes)—a property no other antioxidant possesses. Beyond direct free radical neutralization, lipoic acid serves as an essential cofactor for mitochondrial α-ketoacid dehydrogenase complexes (pyruvate dehydrogenase, α-ketoglutarate dehydrogenase), linking its antioxidant function directly to energy metabolism.</p><p>The reduced form (dihydrolipoic acid) demonstrates remarkable antioxidant activity, directly scavenging reactive oxygen and nitrogen species while regenerating other antioxidants—reducing oxidized vitamin C, vitamin E, and glutathione back to their active forms. This antioxidant network amplification makes lipoic acid a force multiplier in cellular antioxidant defense.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>Mitochondrial cofactor function</li><li>Universal antioxidant mechanisms</li><li>Antioxidant regeneration studies</li><li>Glucose metabolism research</li><li>Neuroprotection models</li><li>Metal chelation research</li><li>Redox signaling pathways</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store refrigerated at 2-8°C protected from light (light-sensitive). Supplied in solution for immediate use. Maintain sealed until use; utilize within 30 days after opening. Protect from oxidizing conditions.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
