--- a/products/thymalin.html
+++ b/products/thymalin.html
@@ -73,6 +73,7 @@
 <tr><td>Form</td><td>Lyophilized Powder</td></tr>
 <tr><td>Quantity</td><td>10mg</td></tr>
 <tr><td>Purity</td><td>≥98%</td></tr>
+<tr><td>Sequence</td><td>{{SEQUENCE}}</td></tr>
 <tr><td>CAS Number</td><td>Thymic extract</td></tr>
 <tr><td>Molecular Weight</td><td>Peptide mixture</td></tr>
 <tr><td>Molecular Formula</td><td>Short peptides</td></tr>
@@ -96,17 +97,19 @@
 </div>
 <h2>What is Thymalin?</h2>
 <p>Thymalin belongs to a unique category of biological compounds developed in the Soviet Union: bioregulators—short peptides (typically 2-4 amino acids) extracted from specific organs that demonstrate tissue-specific regulatory effects. Isolated from thymus tissue, Thymalin contains peptides that appear to modulate T-cell differentiation and thymic function through mechanisms still being elucidated, possibly involving chromatin remodeling and gene expression regulation.</p><p>The bioregulator hypothesis suggests these short peptides bind to DNA regulatory regions, influencing cell differentiation and function in their tissue of origin. While mechanistic details continue to emerge, decades of research in Russia and Eastern Europe have characterized Thymalin's effects on immune function, T-cell populations, and adaptive immunity—making it valuable for thymic biology research and immunosenescence studies.</p>
+{{MECHANISM_SECTION}}
+{{KEY_FINDINGS_SECTION}}
 <h2>Research Applications</h2>
 <ul><li>T-cell differentiation studies</li><li>Thymic function research</li><li>Bioregulator peptide mechanisms</li><li>Immune system modulation</li><li>Immunosenescence models</li><li>Adaptive immunity research</li><li>Peptide-DNA interaction studies</li></ul>
 <h2>Reconstitution & Use</h2>
-<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our reconstitution calculator on the main shop page.</p>
+<p>Reconstitute with bacteriostatic water for injection. For detailed reconstitution instructions and dosing protocols for your specific research application, see our <a href="https://peptideresourcecenter.com" target="_blank" style="color:#2B7DE9;text-decoration:underline">reconstitution guide</a>.</p>
 <h2>Storage & Handling</h2>
 <p>Store lyophilized at -20°C protected from moisture. Reconstitute with sterile or bacteriostatic water; maintain at 2-8°C and use within 30 days. As a biological extract, handle with standard peptide precautions.</p>
 <div class="faq-section">
 <h2>Frequently Asked Questions</h2>
 <details>
 <summary>How should I reconstitute this product?</summary>
-<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Email support@prcpeptides.com for detailed protocols.</p>
+<p>Reconstitute with bacteriostatic water (supplied with order). Add water slowly down the side of the vial, allow to dissolve naturally without shaking. Full protocols available at peptideresourcecenter.com.</p>
 </details>
 <details>
 <summary>What purity testing is performed?</summary>
@@ -121,6 +124,7 @@
 <p>Yes. Every product has an available COA from both the manufacturer and our independent third-party testing lab. Request your batch-specific COA by emailing support@prcpeptides.com with your order number.</p>
 </details>
 </div>
+{{REFERENCES_SECTION}}
 <div class="disclaimer"><strong>FOR RESEARCH PURPOSES ONLY.</strong> This product is intended exclusively for in vitro laboratory research and is not for human consumption, diagnostic use, or therapeutic applications.</div>
 <div class="related-products">
 <h2>Researchers Also Explore</h2>
